k8s/infra/keycloak-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak-mysql
  name: keycloak-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak-mysql
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: keycloak
            - name: MYSQL_PASSWORD
              value: password
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: keycloak
          image: mysql:8
          name: keycloak-mysql
          command: [ "mysqld" ]
          args: [ "--explicit_defaults_for_timestamp" ]
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: keycloak-mysql-claim0
          securityContext:
            runAsUser: 0
            runAsGroup: 0
      restartPolicy: Always
      volumes:
        - name: keycloak-mysql-claim0
          persistentVolumeClaim:
            claimName: keycloak-mysql-claim0
status: {}
