k8s/infra/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy: {}
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
              value: "http://eureka:password@discovery-server:8761/eureka"
            - name: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY
              value: ' TRACE'
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: maizurzu/api-gateway:latest
          name: api-gateway
          ports:
            - containerPort: 8080
            - containerPort: 8181
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  type: LoadBalancer
  ports:
    - name: "8181"
      port: 8181
      targetPort: 8080
  selector:
    app: api-gateway
status:
  loadBalancer: {}
